tests/errors/oob_slice.solar
fn main() {
  let a: [Int] = [10, 20, 30];
  println(a[1u..5u][0u]);
}
